<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity" >


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/LogOut"
            android:text="@string/LogOut"/>

        <Button
            android:layout_alignLeft="@+id/LogOut"
            android:layout_marginLeft="100dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings"
            android:text="@string/Settings"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/driverInfo"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:visibility="gone">
        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/driverProfileImage"
            android:src="@mipmap/ic_user_image"
            android:padding="20sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverName"
                android:paddingBottom="10sp"
                android:paddingTop="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverPhone"
                android:paddingBottom="10sp"
                android:paddingTop="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverCar"
                android:paddingBottom="10sp"
                android:paddingTop="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_gravity="bottom"
        android:text="@string/pickup"
        android:id="@+id/Request"/>
    </LinearLayout>
</FrameLayout>